# fluture-flutter-template-engine

./: Cargo.toml
doc/: tag_identation.pseudo
examples/: partial.arrow  partial.flutter  simple.arrow  simple.dart  widget.arrow  widget.dart
src/: arrow.pest  codegen.rs  fluimte.lalrpop  main.rs  main_old.rs  maino.rs
src/combinators/: attr_cmb.rs  events.rs  mod.rs  props.rs  state_cmb.rs  style.rs  tags.rs
src/helpers/: macros.rs
src/lexer/: helpers.rs  lexer.rs  lexer_token.rs  mod.rs  token_struct.rs  tokenizer.rs
src/lexer/combinators/: mod.rs  space_indentation_combinators.rs  take_ident.rs  take_number.rs
src/parser/: parser.rs
src/tests/: mod.rs
